--- a/src/app/pages/list-posts/list-posts.page.html
+++ b/src/app/pages/list-posts/list-posts.page.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>list-posts</ion-title>
@@ -15,7 +17,7 @@
       <app-post [post]="item"></app-post>
     } @empty{
       <div>
-        no hay datos.. (*__*) (0___0) ([|]____[|])
+        No hay datos...
       </div>
     }
 
