--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,6 @@
 <app-menu></app-menu>
 
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -16,7 +11,6 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <strong>Página de Inicio</strong>
   </div>
 </ion-content>
