--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
     <ion-title>Menú</ion-title>
     <ion-buttons slot="end">
       <ion-button routerLink="/home" routerDirection="root">Inicio</ion-button>
-      <ion-button routerLink="/list-posts" routerDirection="root">List - Post</ion-button>
+      <ion-button routerLink="/list-posts" routerDirection="root">Lista Textos</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
